// Copyright 2019 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/duration.proto";

package drone_queen.config;

option go_package = "config";

// Config is the configuration data served by luci-config for this app.
message Config {
  // access_groups are the luci-auth groups controlling access to RPC endpoints.
  AccessGroups access_groups = 1;

  // assignment_duration is the duration before expiration for drone
  // assignments.
  google.protobuf.Duration assignment_duration = 2;

  // instance identifies which instance of the service this is.  For
  // example, this could be prod for the prod instance.
  string instance = 3;
}

// AccessGroups holds access group configuration
message AccessGroups {
  // drones is the group for calling drone RPCs.
  string drones = 1;
  // inventory_providers is the group for calling inventory RPCs.
  string inventory_providers = 2;
  // inspectors is the group for calling inspection RPCs.
  string inspectors = 3;
}
